--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
         <h2>My Skills.</h2>
         <div class="skill-row">
           <h3>Programming</h3>
-          <img class="Skill-image-1" src="E:\CSS\download (1).jfif" alt="progrmming">
+          <img class="Skill-image-1" src="download (1).jfif" alt="progrmming">
 
           <p class="Profile-para-2">I have knowledge of programming languages like C, C++, HTML, CSS, Bootstrap and JavaScript. I am learning more about these languages, and also working on my DSA and OOPS concepts.</p>
         </div>
         <div class="skill-row">
           <h3>Softwares</h3>
-          <img class="Skill-image-2" src="E:\CSS\Software.jpg" alt="Software">
+          <img class="Skill-image-2" src="Software.jpg" alt="Software">
 
           <p class="Profile-para-3">I have knowledge of softwares like MS Word, MS Excel and also technical softwares such as Tinkercad and Proteus.</p>
         </div>
